logs/Slang/generated/hdlconv/hdlconvertor_p766.sv.log
name: hdlconvertor_p766
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p766.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p766.sv:29:15: error: unknown interface 'interface'
module memMod(interface a); // Uses just the interface keyword
              ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p766.sv:39:15: error: unknown interface 'interface'
module cpuMod(interface b);
              ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p766.sv:54:19: error: hierarchical names are not allowed in constant expressions
memMod mem(sb_intf.slave); // only has access to the slaveRead task
           ~~~~~~~^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p766.sv:55:19: error: hierarchical names are not allowed in constant expressions
cpuMod cpu(sb_intf.master); // only has access to the masterRead task
           ~~~~~~~^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p766.sv:56:22: error: hierarchical names are not allowed in constant expressions
memMod memW(wide_intf.slave); // 16-bit wide memory
            ~~~~~~~~~^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p766.sv:57:22: error: hierarchical names are not allowed in constant expressions
cpuMod cpuW(wide_intf.master); // 16-bit wide cpu
            ~~~~~~~~~^
